# HOA_prospector

./: .gitignore  .vercelignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  vercel.json
config/: settings.py
scripts/: build_viewer_data.py
src/enrichment/: merger.py
src/models/: association.py
src/scrapers/: amenities.py  fl_dbpr_bulk.py  fl_dbpr_search.py  fl_property.py  fl_sunbiz.py  nc_property.py  nc_sos.py  propublica.py
src/utils/: db.py  dbpr_mgmt.py  export.py  http_client.py  matching.py
viewer/: server.py  viewer.html
viewer/data/: counties.json
