[project]
name = "hoa-crawl"
version = "0.1.0"
description = "HOA data enrichment pipeline — scrapes public registrations from FL and NC"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pandas>=2.2",
    "pydantic>=2.6",
    "rich>=13.7",
    "tenacity>=8.2",
    "sqlite-utils>=3.36",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.3"]

[tool.ruff]
line-length = 100
target-version = "py311"
